Chapter 01, +ft.com scraping

--- a/01-some-data.ipynb
+++ b/01-some-data.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     "def play_success_sound():\n",
     "    os.system('afplay /System/Library/Sounds/Pop.aiff')\n",
     "\n",
-    "def get_page_links_at_date(url, year, month, day, hour, minute):\n",
+    "def get_drudge_links_at_date(url, year, month, day, hour, minute):\n",
     "    w = WaybackMachineCDXServerAPI(url, user_agent=user_agent)\n",
     "    url = w.near(year=year, month=month, day=day, hour=hour, minute=minute).archive_url\n",
     "    response = requests.get(url, headers=headers, proxies=proxies)\n",
@@ -194,17 +194,17 @@
     "\n",
     "def scrape_drudge_with_proxy():\n",
     "    now = pd.Timestamp.now()\n",
-    "    dates = pd.date_range(start=\"2022-02-20\", end=now, freq=\"D\")[::-1]\n",
+    "    dates = pd.date_range(start=\"2022-01-01\", end=now, freq=\"D\")\n",
     "\n",
     "    for date in tqdm(dates, desc=\"Scraping progress\", unit=\"date\"):\n",
     "        # check if we already have the data\n",
     "        if os.path.exists(f\"01-some-data/drudgereport.com/{date}.jsonl\"):\n",
     "            continue\n",
     "        data = []\n",
-    "        am_links = get_page_links_at_date(\"https://drudgereport.com/\", year=date.year, month=date.month, day=date.day, hour=6, minute=0)\n",
+    "        am_links = get_drudge_links_at_date(\"https://drudgereport.com/\", year=date.year, month=date.month, day=date.day, hour=6, minute=0)\n",
     "        for url, text in am_links:\n",
     "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": True})\n",
-    "        pm_links = get_page_links_at_date(\"https://drudgereport.com/\", year=date.year, month=date.month, day=date.day, hour=18, minute=0)\n",
+    "        pm_links = get_drudge_links_at_date(\"https://drudgereport.com/\", year=date.year, month=date.month, day=date.day, hour=18, minute=0)\n",
     "        for url, text in pm_links:\n",
     "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": False})\n",
     "        # write to jsonl\n",
@@ -234,15 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping progress:   0%|          | 3/739 [00:44<3:03:12, 14.94s/date]\n",
-      "Scraping progress:   2%|▏         | 13/739 [03:16<3:35:06, 17.78s/date]"
+      "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress:  27%|██▋       | 214/789 [18:15<49:04,  5.12s/date]  \n",
+      "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
      ]
     }
    ],
@@ -250,7 +257,7 @@
     "import os\n",
     "from retrying import retry\n",
     "\n",
-    "@retry(wait_exponential_multiplier=1000, wait_exponential_max=10000)\n",
+    "@retry(wait_exponential_multiplier=1000, wait_exponential_max=60000)\n",
     "def scrape_drudge_with_proxy_retry():\n",
     "    scrape_drudge_with_proxy()\n",
     "\n",
@@ -319,6 +326,8 @@
     "\n",
     "def clean_up_drudge_links():\n",
     "    # iterate over each file in the directory\n",
+    "    preprune_count = 0\n",
+    "    postprune_count = 0\n",
     "    for filename in os.listdir(\"01-some-data/drudgereport.com\"):\n",
     "        filepath = os.path.join(\"01-some-data/drudgereport.com\", filename)\n",
     "        with open(filepath, 'r') as f:\n",
@@ -335,16 +344,20 @@
     "        filtered = [item for item in data if len(urlparse(item['url']).path.split('/')) > 2]\n",
     "        # remove internal links to drudge\n",
     "        filtered = [item for item in filtered if \"drudgereport.com\" not in item['url']]\n",
-    "        old_size = len(data)\n",
-    "        new_size = len(filtered)\n",
+    "        # remove items with less than three words in text\n",
+    "        # filtered = [item for item in filtered if len(item['text'].split()) > 2]\n",
     "\n",
-    "        print(f\"Old size: {old_size}\")\n",
-    "        print(f\"New size: {new_size}\")\n",
+    "        preprune_count += len(data)\n",
+    "        postprune_count += len(filtered)\n",
     "\n",
     "        # write the filtered data back to the file\n",
     "        with open(filepath, 'w') as f:\n",
     "            for item in filtered:\n",
-    "                f.write(json.dumps(item) + \"\\n\")\n"
+    "                f.write(json.dumps(item) + \"\\n\")\n",
+    "\n",
+    "        print(f\"Preprune count: {preprune_count}\")\n",
+    "        print(f\"Postprune count: {postprune_count}\")\n",
+    "        print(f\"Pruned {preprune_count - postprune_count} links or {((preprune_count - postprune_count) / preprune_count) * 100:.2f}%\")\n"
    ]
   },
   {
@@ -648,63 +661,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from waybackpy import WaybackMachineCDXServerAPI\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import re\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# mkdir 01-some-data/ft.com\n",
+    "if not os.path.exists(\"01-some-data/ft.com\"):\n",
+    "    os.mkdir(\"01-some-data/ft.com\")\n",
+    "\n",
+    "username = os.getenv('SMARTPROXY_USERNAME')\n",
+    "password = os.getenv('SMARTPROXY_PASSWORD')\n",
+    "proxy = f\"https://{username}:{password}@gate.smartproxy.com:7000\"\n",
+    "\n",
+    "proxies = {'https': proxy}\n",
+    "user_agent = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
+    "headers = {'User-Agent': user_agent}\n",
+    "\n",
+    "def get_ft_links_at_date(url, year, month, day, hour, minute):\n",
+    "    w = WaybackMachineCDXServerAPI(url, user_agent=user_agent)\n",
+    "    url = w.near(year=year, month=month, day=day, hour=hour, minute=minute).archive_url\n",
+    "    response = requests.get(url, headers=headers, proxies=proxies)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    # TODO: find the right selector\n",
+    "    links = soup.find_all('a')\n",
+    "    article_links = [(link.get('href'), link.text) for link in links]\n",
+    "    article_links = [link for link in article_links if link[1]]\n",
+    "    return article_links\n",
+    "\n",
+    "def scrape_ft_with_proxy():\n",
+    "    now = pd.Timestamp.now()\n",
+    "    dates = pd.date_range(start=\"2022-01-01\", end=now, freq=\"D\")\n",
+    "\n",
+    "    for date in tqdm(dates, desc=\"Scraping progress\", unit=\"date\"):\n",
+    "        # check if we already have the data\n",
+    "        if os.path.exists(f\"01-some-data/ft.com/{date}.jsonl\"):\n",
+    "            continue\n",
+    "        data = []\n",
+    "        am_links = get_ft_links_at_date(\"https://ft.com/\", year=date.year, month=date.month, day=date.day, hour=6, minute=0)\n",
+    "        for url, text in am_links:\n",
+    "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": True})\n",
+    "        pm_links = get_ft_links_at_date(\"https://ft.com/\", year=date.year, month=date.month, day=date.day, hour=18, minute=0)\n",
+    "        for url, text in pm_links:\n",
+    "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": False})\n",
+    "        # write to jsonl\n",
+    "        with open(f\"01-some-data/ft.com/{date}.jsonl\", \"w\") as f:\n",
+    "            for row in data:\n",
+    "                f.write(json.dumps(row) + \"\\n\")\n",
+    "        os.system('afplay /System/Library/Sounds/Pop.aiff')\n",
+    "\n",
+    "def clean_up_ft_links():\n",
+    "    # iterate over each file in the directory\n",
+    "    preprune_count = 0\n",
+    "    postprune_count = 0\n",
+    "    for filename in os.listdir(\"01-some-data/ft.com\"):\n",
+    "        filepath = os.path.join(\"01-some-data/ft.com\", filename)\n",
+    "        with open(filepath, 'r') as f:\n",
+    "            data = [json.loads(line) for line in f]\n",
+    "\n",
+    "        # regex pattern to match everything after the last http, including the http\n",
+    "\n",
+    "        pattern = r\"(http[s]?://.*)\"\n",
+    "\n",
+    "        # iterate over each item in the data\n",
+    "        for item in data:\n",
+    "            # replace the matched pattern with an empty string\n",
+    "            match = re.search(pattern, item['url'])\n",
+    "            if match:\n",
+    "                item['url'] = match.group(1)\n",
+    "        # only include urls with /content/ in them\n",
+    "        filtered = [item for item in data if \"/content/\" in item['url']]\n",
+    "\n",
+    "        preprune_count += len(data)\n",
+    "        postprune_count += len(filtered)\n",
+    "\n",
+    "        # write the filtered data back to the file\n",
+    "        with open(filepath, 'w') as f:\n",
+    "            for item in filtered:\n",
+    "                f.write(json.dumps(item) + \"\\n\")\n",
+    "\n",
+    "        print(f\"Preprune count: {preprune_count}\")\n",
+    "        print(f\"Postprune count: {postprune_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NoCDXRecordFound",
-     "evalue": "Wayback Machine's CDX server did not return any records for the query. The URL may not have any archives  on the Wayback Machine or the URL may have been recently archived and is still not available on the CDX server.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoCDXRecordFound\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 40\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[1;32m     36\u001b[0m                 f\u001b[38;5;241m.\u001b[39mwrite(json\u001b[38;5;241m.\u001b[39mdumps(row) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 40\u001b[0m \u001b[43mscrape_website\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://drudgereport.com\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m2022-02-20\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[20], line 27\u001b[0m, in \u001b[0;36mscrape_website\u001b[0;34m(url, start_date)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# sleep a bit so we don't get blocked\u001b[39;00m\n\u001b[1;32m     25\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m30\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m pm_links \u001b[38;5;241m=\u001b[39m \u001b[43mget_page_links_at_date\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myear\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmonth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmonth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mday\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mday\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhour\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m18\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminute\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m url, text \u001b[38;5;129;01min\u001b[39;00m pm_links:\n\u001b[1;32m     29\u001b[0m     data\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m\"\u001b[39m: date\u001b[38;5;241m.\u001b[39misoformat(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: url, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m: text, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misMorning\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m})\n",
-      "Cell \u001b[0;32mIn[2], line 12\u001b[0m, in \u001b[0;36mget_page_links_at_date\u001b[0;34m(url, year, month, day, hour, minute)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_page_links_at_date\u001b[39m(url, year, month, day, hour, minute):\n\u001b[1;32m     11\u001b[0m     w \u001b[38;5;241m=\u001b[39m WaybackMachineCDXServerAPI(url, user_agent\u001b[38;5;241m=\u001b[39muser_agent)\n\u001b[0;32m---> 12\u001b[0m     url \u001b[38;5;241m=\u001b[39m \u001b[43mw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnear\u001b[49m\u001b[43m(\u001b[49m\u001b[43myear\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmonth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmonth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mday\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mday\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhour\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhour\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminute\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mminute\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39marchive_url\n\u001b[1;32m     13\u001b[0m     response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m     14\u001b[0m     soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mtext, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/zero/.venv/lib/python3.11/site-packages/waybackpy/cdx_api.py:231\u001b[0m, in \u001b[0;36mWaybackMachineCDXServerAPI.near\u001b[0;34m(self, year, month, day, hour, minute, unix_timestamp, wayback_machine_timestamp)\u001b[0m\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m first_snapshot:\n\u001b[0;32m--> 231\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m NoCDXRecordFound(\n\u001b[1;32m    232\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWayback Machine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms CDX server did not return any records \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    233\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfor the query. The URL may not have any archives \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    234\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m on the Wayback Machine or the URL may have been recently \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    235\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marchived and is still not available on the CDX server.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    236\u001b[0m     )\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m first_snapshot\n",
-      "\u001b[0;31mNoCDXRecordFound\u001b[0m: Wayback Machine's CDX server did not return any records for the query. The URL may not have any archives  on the Wayback Machine or the URL may have been recently archived and is still not available on the CDX server."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress:   0%|          | 0/789 [00:13<?, ?date/s]\n",
+      "Scraping progress:   0%|          | 0/789 [00:19<?, ?date/s]\n",
+      "Scraping progress:   0%|          | 3/789 [01:06<4:50:17, 22.16s/date]\n",
+      "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import time\n",
     "import os\n",
-    "import json\n",
-    "from urllib.parse import urlparse\n",
+    "from retrying import retry\n",
     "\n",
-    "def scrape_website(url, start_date):\n",
-    "    now = pd.Timestamp.now()\n",
-    "    dates = pd.date_range(start=start_date, end=now, freq=\"D\")\n",
+    "@retry(wait_exponential_multiplier=1000, wait_exponential_max=60000)\n",
+    "def scrape_ft_with_proxy_retry():\n",
+    "    scrape_ft_with_proxy()\n",
     "\n",
-    "    # create directory if not exists\n",
-    "    dir_name = urlparse(url).netloc\n",
-    "    if not os.path.exists(f\"01-some-data/{dir_name}\"):\n",
-    "        os.makedirs(f\"01-some-data/{dir_name}\")\n",
-    "\n",
-    "    for date in dates:\n",
-    "        # check if we already have the data\n",
-    "        if os.path.exists(f\"01-some-data/{dir_name}/{date}.jsonl\"):\n",
-    "            continue\n",
-    "        data = []\n",
-    "        am_links = get_page_links_at_date(url, year=date.year, month=date.month, day=date.day, hour=6, minute=0)\n",
-    "        for url, text in am_links:\n",
-    "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": True})\n",
-    "        # sleep a bit so we don't get blocked\n",
-    "        time.sleep(30)\n",
-    "\n",
-    "        pm_links = get_page_links_at_date(url, year=date.year, month=date.month, day=date.day, hour=18, minute=0)\n",
-    "        for url, text in pm_links:\n",
-    "            data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": False})\n",
-    "        # sleep a bit so we don't get blocked\n",
-    "        time.sleep(30)\n",
-    "\n",
-    "        # write to jsonl\n",
-    "        with open(f\"01-some-data/{dir_name}/{date}.jsonl\", \"w\") as f:\n",
-    "            for row in data:\n",
-    "                f.write(json.dumps(row) + \"\\n\")\n",
-    "\n",
-    "scrape_website(\"https://drudgereport.com\", \"2022-02-20\")"
+    "try:\n",
+    "    scrape_ft_with_proxy_retry()\n",
+    "except Exception as e:\n",
+    "    os.system('say \"An error occurred. Please check the issue.\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprune count: 943\n",
+      "Postprune count: 270\n",
+      "Preprune count: 1876\n",
+      "Postprune count: 531\n",
+      "Preprune count: 2817\n",
+      "Postprune count: 797\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_up_ft_links()"
    ]
   }
  ],
