Chapter 01, +bloomberg.com/markets scraping

--- a/01-some-data.ipynb
+++ b/01-some-data.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,16 +759,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping progress:   0%|          | 0/789 [00:13<?, ?date/s]\n",
-      "Scraping progress:   0%|          | 0/789 [00:19<?, ?date/s]\n",
-      "Scraping progress:   0%|          | 3/789 [01:06<4:50:17, 22.16s/date]\n",
+      "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress:   3%|▎         | 27/789 [01:42<48:19,  3.81s/date]  \n",
       "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
      ]
     }
@@ -807,6 +812,160 @@
    ],
    "source": [
     "clean_up_ft_links()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from waybackpy import WaybackMachineCDXServerAPI\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import re\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# mkdir 01-some-data/bloomberg.com\n",
+    "if not os.path.exists(\"01-some-data/bloomberg.com\"):\n",
+    "  os.mkdir(\"01-some-data/bloomberg.com\")\n",
+    "\n",
+    "username = os.getenv('SMARTPROXY_USERNAME')\n",
+    "password = os.getenv('SMARTPROXY_PASSWORD')\n",
+    "proxy = f\"https://{username}:{password}@gate.smartproxy.com:7000\"\n",
+    "\n",
+    "proxies = {'https': proxy}\n",
+    "user_agent = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
+    "headers = {'User-Agent': user_agent}\n",
+    "\n",
+    "def get_bloomberg_links_at_date(url, year, month, day, hour, minute):\n",
+    "  w = WaybackMachineCDXServerAPI(url, user_agent=user_agent)\n",
+    "  url = w.near(year=year, month=month, day=day, hour=hour, minute=minute).archive_url\n",
+    "  response = requests.get(url, headers=headers, proxies=proxies)\n",
+    "  soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "  # TODO: find the right selector\n",
+    "  links = soup.find_all('a')\n",
+    "  article_links = [(link.get('href'), link.text) for link in links]\n",
+    "  article_links = [link for link in article_links if link[1]]\n",
+    "  return article_links\n",
+    "\n",
+    "def scrape_bloomberg_with_proxy():\n",
+    "  now = pd.Timestamp.now()\n",
+    "  dates = pd.date_range(start=\"2022-01-01\", end=now, freq=\"D\")\n",
+    "\n",
+    "  for date in tqdm(dates, desc=\"Scraping progress\", unit=\"date\"):\n",
+    "    # check if we already have the data\n",
+    "    if os.path.exists(f\"01-some-data/bloomberg.com/{date}.jsonl\"):\n",
+    "      continue\n",
+    "    data = []\n",
+    "    am_links = get_bloomberg_links_at_date(\"https://www.bloomberg.com/markets\", year=date.year, month=date.month, day=date.day, hour=6, minute=0)\n",
+    "    for url, text in am_links:\n",
+    "      data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": True})\n",
+    "    pm_links = get_bloomberg_links_at_date(\"https://www.bloomberg.com/markets\", year=date.year, month=date.month, day=date.day, hour=18, minute=0)\n",
+    "    for url, text in pm_links:\n",
+    "      data.append({\"date\": date.isoformat(), \"url\": url, \"text\": text, \"isMorning\": False})\n",
+    "    # write to jsonl\n",
+    "    with open(f\"01-some-data/bloomberg.com/{date}.jsonl\", \"w\") as f:\n",
+    "      for row in data:\n",
+    "        f.write(json.dumps(row) + \"\\n\")\n",
+    "    os.system('afplay /System/Library/Sounds/Pop.aiff')\n",
+    "\n",
+    "def clean_up_bloomberg_links():\n",
+    "  # iterate over each file in the directory\n",
+    "  preprune_count = 0\n",
+    "  postprune_count = 0\n",
+    "  for filename in os.listdir(\"01-some-data/bloomberg.com\"):\n",
+    "    filepath = os.path.join(\"01-some-data/bloomberg.com\", filename)\n",
+    "    with open(filepath, 'r') as f:\n",
+    "      data = [json.loads(line) for line in f]\n",
+    "\n",
+    "    # regex pattern to match everything after the last http, including the http\n",
+    "\n",
+    "    pattern = r\"(http[s]?://.*)\"\n",
+    "\n",
+    "    # iterate over each item in the data\n",
+    "    for item in data:\n",
+    "      # replace the matched pattern with an empty string\n",
+    "      match = re.search(pattern, item['url'])\n",
+    "      if match:\n",
+    "        item['url'] = match.group(1)\n",
+    "\n",
+    "      # trim the text\n",
+    "      item['text'] = item['text'].strip()\n",
+    "    # only include urls with /news/articles/ in them\n",
+    "    filtered = [item for item in data if \"/news/articles/\" in item['url']]\n",
+    "    # remove those with text len less than 5\n",
+    "    filtered = [item for item in filtered if len(item['text']) > 5]\n",
+    "\n",
+    "\n",
+    "    preprune_count += len(data)\n",
+    "    postprune_count += len(filtered)\n",
+    "\n",
+    "    # write the filtered data back to the file\n",
+    "    with open(filepath, 'w') as f:\n",
+    "      for item in filtered:\n",
+    "        f.write(json.dumps(item) + \"\\n\")\n",
+    "\n",
+    "    print(f\"Preprune count: {preprune_count}\")\n",
+    "    print(f\"Postprune count: {postprune_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress:   0%|          | 3/789 [01:02<4:34:03, 20.92s/date]\n",
+      "Scraping progress:   0%|          | 0/789 [00:00<?, ?date/s]"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from retrying import retry\n",
+    "\n",
+    "@retry(wait_exponential_multiplier=1000, wait_exponential_max=60000)\n",
+    "def scrape_bloomberg_with_proxy_retry():\n",
+    "  scrape_bloomberg_with_proxy()\n",
+    "\n",
+    "try:\n",
+    "  scrape_bloomberg_with_proxy_retry()\n",
+    "except Exception as e:\n",
+    "  os.system('say \"An error occurred. Please check the issue.\"')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprune count: 77\n",
+      "Postprune count: 42\n",
+      "Preprune count: 151\n",
+      "Postprune count: 82\n",
+      "Preprune count: 190\n",
+      "Postprune count: 103\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_up_bloomberg_links()"
    ]
   }
  ],
