Chapter 03, framework, extend lookback period for bear coverage

--- a/03-framework.ipynb
+++ b/03-framework.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -33,13 +33,17 @@
      "text": [
       "Distribution of best overnight performers\n",
       "Ticker\n",
-      "SQQQ    97\n",
-      "TQQQ    72\n",
-      "UDOW    32\n",
-      "SDOW    28\n",
-      "SPXS    13\n",
-      "SPXL     9\n",
-      "Name: count, dtype: int64\n"
+      "SQQQ    188\n",
+      "TQQQ    163\n",
+      "UDOW     63\n",
+      "SDOW     57\n",
+      "SPXS     39\n",
+      "SPXL     31\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Confirming no dates with a return less than zero\n",
+      "          Date Ticker  Overnight_Return_Percentage\n",
+      "367 2023-06-21   SPXS                    -0.205321\n"
      ]
     }
    ],
@@ -72,26 +76,85 @@
     "    \n",
     "    return best_ticker\n",
     "\n",
-    "# calculate the best overnight performer for every day since 2022-01-01 and put this in a DataFrame\n",
-    "results = []\n",
-    "for date in pd.date_range('2022-01-01', '2022-12-31'):\n",
-    "    best_ticker = best_overnight_performance(ticker_days, date)\n",
-    "    if best_ticker:  # Ensure there is a best ticker for the date\n",
-    "        overnight_return_percentage = ticker_days[best_ticker].loc[date, 'Overnight_Return'] * 100\n",
-    "        results.append({'Date': date, 'Ticker': best_ticker, 'Overnight_Return_Percentage': overnight_return_percentage})\n",
+    "def calculate_winner_df(start, end):\n",
+    "    # calculate the best overnight performer for every day since 2022-01-01 and put this in a DataFrame\n",
+    "    results = []\n",
+    "    for date in pd.date_range(start, end):\n",
+    "        best_ticker = best_overnight_performance(ticker_days, date)\n",
+    "        if best_ticker:  # Ensure there is a best ticker for the date\n",
+    "            overnight_return_percentage = ticker_days[best_ticker].loc[date, 'Overnight_Return'] * 100\n",
+    "            results.append({'Date': date, 'Ticker': best_ticker, 'Overnight_Return_Percentage': overnight_return_percentage})\n",
     "\n",
-    "results_df = pd.DataFrame(results)\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    return results_df\n",
+    "now = pd.Timestamp.now()\n",
     "\n",
+    "results_df = calculate_winner_df('2022-01-01', now)\n",
     "print('Distribution of best overnight performers')\n",
     "# print the distribution of best overnight performers\n",
-    "print(results_df['Ticker'].value_counts())\n"
+    "print(results_df['Ticker'].value_counts())\n",
+    "\n",
+    "print('\\Checking dates with a return less than zero')\n",
+    "# print the dates with a return less than zero\n",
+    "print(results_df[results_df['Overnight_Return_Percentage'] < 0])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, we have the best performing overnight return for every day since 2022-01-01. Now we need to get the headlines for each day, and then we can start to build a model. We will use only one data source for now, we can do watercolors later. Start with bloomberg."
+    "This is too bullish. Let's extend the window to the beginning of 2020 and see if we get a more balanced distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of best overnight performers\n",
+      "Ticker\n",
+      "TQQQ    333\n",
+      "SQQQ    283\n",
+      "UDOW    170\n",
+      "SDOW    141\n",
+      "SPXS     63\n",
+      "SPXL     56\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Checking dates with a return less than zero\n",
+      "          Date Ticker  Overnight_Return_Percentage\n",
+      "872 2023-06-21   SPXS                    -0.205321\n",
+      "\n",
+      "Average overnight return: 4.27%\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_df = calculate_winner_df('2020-01-01', now)\n",
+    "print('Distribution of best overnight performers')\n",
+    "# print the distribution of best overnight performers\n",
+    "print(results_df['Ticker'].value_counts())\n",
+    "\n",
+    "print('\\nChecking dates with a return less than zero')\n",
+    "# print the dates with a return less than zero\n",
+    "print(results_df[results_df['Overnight_Return_Percentage'] < 0])\n",
+    "\n",
+    "# print the mean return, pretty printed\n",
+    "print(f'\\nAverage overnight return: {results_df[\"Overnight_Return_Percentage\"].mean():.2f}%')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slightly better. We'll take it. This means we need to scrape more data.\n",
+    "\n",
+    "We have the best performing overnight return for every day since 2022-01-01. Now we need to get the headlines for each day, and then we can start to build a model. We will use only one data source for now, we can do watercolors later. Start with bloomberg."
    ]
   },
   {
