--- a/03-markets.ipynb
+++ b/03-markets.ipynb
@@ -4,12 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I haven't done this in a while. It used to be Yahoo Finance API, then Quantopian and Quandl, I'm way behind. I hear good things about _Alpha Vantage_."
+    "I haven't done this in a while. It used to be Yahoo Finance API, then Quantopian and Quandl, I'm way behind. I hear good things about (AI take the wheel) _Alpha Vantage_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import Memory\n",
+    "\n",
+    "memory = Memory('.cache', verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +41,7 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@memory.cache\n",
     "def fetch_dailies(ticker):\n",
     "  url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&outputsize=full&symbol={ticker}&apikey={os.getenv('ALPHAVANTAGE_API_KEY')}\"\n",
     "  response = requests.get(url)\n",
@@ -37,15 +57,27 @@
     "\n",
     "  # Calculate the overnight return\n",
     "  df['Overnight_Return'] = (df['Open'] / df['Close'].shift(-1)) - 1\n",
+    "  # drop the last row, since we don't have the next day's data\n",
+    "  df = df.iloc[:-1]\n",
     "\n",
     "  return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "________________________________________________________________________________\n",
+      "[Memory] Calling __main__--var-folders-y4-m2rb4mm129b7g3k8hskwsqww0000gn-T-ipykernel-2883560159.fetch_dailies...\n",
+      "fetch_dailies('AAPL')\n",
+      "____________________________________________________fetch_dailies - 1.2s, 0.0min\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -77,6 +109,16 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-02-29</th>\n",
+       "      <td>181.17</td>\n",
+       "      <td>182.5700</td>\n",
+       "      <td>179.5300</td>\n",
+       "      <td>180.75</td>\n",
+       "      <td>135487634</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>-0.001378</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-02-28</th>\n",
        "      <td>182.51</td>\n",
@@ -118,16 +160,6 @@
        "      <td>0.003471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-02-22</th>\n",
-       "      <td>183.48</td>\n",
-       "      <td>184.9550</td>\n",
-       "      <td>182.4600</td>\n",
-       "      <td>184.37</td>\n",
-       "      <td>52292208</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>0.006362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -136,6 +168,16 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999-11-08</th>\n",
+       "      <td>87.75</td>\n",
+       "      <td>97.7300</td>\n",
+       "      <td>86.7500</td>\n",
+       "      <td>96.37</td>\n",
+       "      <td>8490400</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>-0.006341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1999-11-05</th>\n",
@@ -177,52 +219,42 @@
        "      <td>AAPL</td>\n",
        "      <td>0.004896</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999-11-01</th>\n",
-       "      <td>80.00</td>\n",
-       "      <td>80.6900</td>\n",
-       "      <td>77.3700</td>\n",
-       "      <td>77.62</td>\n",
-       "      <td>2487300</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>6120 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Open      High       Low   Close    Volume Ticker  \\\n",
-       "2024-02-28  182.51  183.1200  180.1300  181.42  48953939   AAPL   \n",
-       "2024-02-27  181.10  183.9225  179.5600  182.63  54318851   AAPL   \n",
-       "2024-02-26  182.24  182.7600  180.6500  181.16  40867421   AAPL   \n",
-       "2024-02-23  185.01  185.0400  182.2300  182.52  45119677   AAPL   \n",
-       "2024-02-22  183.48  184.9550  182.4600  184.37  52292208   AAPL   \n",
-       "...            ...       ...       ...     ...       ...    ...   \n",
-       "1999-11-05   84.62   88.3700   84.0000   88.31   3721500   AAPL   \n",
-       "1999-11-04   82.06   85.3700   80.6200   83.62   3384700   AAPL   \n",
-       "1999-11-03   81.62   83.2500   81.0000   81.50   2932700   AAPL   \n",
-       "1999-11-02   78.00   81.6900   77.3100   80.25   3564600   AAPL   \n",
-       "1999-11-01   80.00   80.6900   77.3700   77.62   2487300   AAPL   \n",
+       "              Open      High       Low   Close     Volume Ticker  \\\n",
+       "2024-02-29  181.17  182.5700  179.5300  180.75  135487634   AAPL   \n",
+       "2024-02-28  182.51  183.1200  180.1300  181.42   48953939   AAPL   \n",
+       "2024-02-27  181.10  183.9225  179.5600  182.63   54318851   AAPL   \n",
+       "2024-02-26  182.24  182.7600  180.6500  181.16   40867421   AAPL   \n",
+       "2024-02-23  185.01  185.0400  182.2300  182.52   45119677   AAPL   \n",
+       "...            ...       ...       ...     ...        ...    ...   \n",
+       "1999-11-08   87.75   97.7300   86.7500   96.37    8490400   AAPL   \n",
+       "1999-11-05   84.62   88.3700   84.0000   88.31    3721500   AAPL   \n",
+       "1999-11-04   82.06   85.3700   80.6200   83.62    3384700   AAPL   \n",
+       "1999-11-03   81.62   83.2500   81.0000   81.50    2932700   AAPL   \n",
+       "1999-11-02   78.00   81.6900   77.3100   80.25    3564600   AAPL   \n",
        "\n",
        "            Overnight_Return  \n",
+       "2024-02-29         -0.001378  \n",
        "2024-02-28         -0.000657  \n",
        "2024-02-27         -0.000331  \n",
        "2024-02-26         -0.001534  \n",
        "2024-02-23          0.003471  \n",
-       "2024-02-22          0.006362  \n",
        "...                      ...  \n",
+       "1999-11-08         -0.006341  \n",
        "1999-11-05          0.011959  \n",
        "1999-11-04          0.006871  \n",
        "1999-11-03          0.017072  \n",
        "1999-11-02          0.004896  \n",
-       "1999-11-01               NaN  \n",
        "\n",
        "[6120 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
