--- a/01-dirty-data.ipynb
+++ b/01-dirty-data.ipynb
@@ -41,7 +41,7 @@
     "import json\n",
     "import os\n",
     "import pandas as pd\n",
-    "from requests import Session\n",
+    "import requests\n",
     "import time\n",
     "from utils import dates_to_scrape, timeout, play_sound_or_say\n",
     "from retrying import retry\n",
@@ -50,12 +50,9 @@
     "\n",
     "username = os.getenv('SMARTPROXY_USERNAME')\n",
     "password = os.getenv('SMARTPROXY_PASSWORD')\n",
-    "proxy = f\"https://{username}:{password}@gate.smartproxy.com:7000\"\n",
-    "user_agent = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
     "\n",
-    "session = Session()\n",
-    "session.proxies = {'https': proxy}\n",
-    "session.headers = {'User-Agent': user_agent}\n",
+    "proxies = {'https': f\"https://{username}:{password}@gate.smartproxy.com:7000\"}\n",
+    "headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"}\n",
     "\n",
     "output_dir = \"01-dirty-data\"\n",
     "target_domains = [\"https://drudgereport.com/\", \"https://ft.com/\", \"https://www.bloomberg.com/markets\"]\n",
@@ -72,7 +69,7 @@
     "def get_links_at_date(url, year, month, day, hour, minute):\n",
     "    w = WaybackMachineCDXServerAPI(url, user_agent=user_agent)\n",
     "    url = w.near(year=year, month=month, day=day, hour=hour, minute=minute).archive_url\n",
-    "    response = session.get(url)\n",
+    "    response = requests.get(url, headers=headers, proxies=proxies)\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    links = soup.find_all('a')\n",
     "    article_links = [(link.get('href'), link.text) for link in links]\n",
