--- a/05-prompts.ipynb
+++ b/05-prompts.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's wherer we mint. We will explore all the prompt methodologies, in time..."
+    "Here's where we mint. We will explore all the prompt methodologies, in time... Let's just start with the simplest one, and see how it goes. Gotta finish the pipe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "2021-02-07  ft.com     5  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,61 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows with target None: 155\n",
+      "Number of rows with target None: 203\n",
       "Number of rows with prompt None: 0\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prompt</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [prompt, target]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,7 +301,60 @@
     "test_df.to_json('05-prompts/test.json', orient='records', lines=True)\n",
     "# rename to jsonl\n",
     "os.rename('05-prompts/train.json', '05-prompts/train.jsonl')\n",
-    "os.rename('05-prompts/test.json', '05-prompts/test.jsonl')\n"
+    "os.rename('05-prompts/test.json', '05-prompts/test.jsonl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date: 2020-01-23 00:00:00\n",
+      "Source: ft.com\n",
+      "- China extends travel restrictions in effort to contain coronavirus\n",
+      "- China quarantines city in effort to contain viral outbreak\n",
+      "- Trade tensions erupt between London and Washington\n",
+      "- How China’s slow response aided coronavirus outbreak\n",
+      "- Boris Johnson hails moment as EU withdrawal bill clears parliament\n",
+      "- Tesla hits $100bn stock market value for first time\n",
+      "- Iran: the unspoken battle to succeed Ayatollah Khamenei\n",
+      "- Trade tensions erupt between London and Washington\n",
+      "- US and France agree deal on digital tax\n",
+      "- US Treasury secretary Mnuchin launches attack on Greta Thunberg\n",
+      "- Tesla hits $100bn stock market value for first time\n",
+      "- ‘Mr Super Prime’ resigns after posting luxury home on Instagram\n",
+      "- Boeing chief on the Max: ‘I believe in this airplane’\n",
+      "- Comcast takes aim at CNN with NBC-Sky global news channel\n",
+      "- Amazon Music subscriber numbers close in on Apple\n",
+      "Source: drudgereport.com\n",
+      "- Dems face risks and limits in impeachment trial...\n",
+      "- Senators Play With Toys, Read Books...\n",
+      "- Suffer 'digital detox' as they hear case...\n",
+      "- Mulvaney becomes top target...\n",
+      "- POLL:  72% WANT WITNESSES...\n",
+      "- PEW:  DEEP PARTISAN SPLIT ON REMOVAL...\n",
+      "- Schiff, Nadler tension spills out...\n",
+      "- Giuliani claims he has goods on Biden, threatens to go public...\n",
+      "- SNAKES COULD BE SOURCE\n",
+      "- SUSPECTED CASE IN TEXAS\n",
+      "- Trump's reelection looks more like long shot than slam dunk?\n",
+      "- CNN cancels Dem presidential town halls because of impeachment trial...\n",
+      "- Over 40% of Americans don't have $1,000 for an emergency!\n",
+      "- MAG: Groupthink, Self-Censorship Making Journalism Lifeless...\n",
+      "- Weinstein trial turns to accusers...\n",
+      "\n",
+      "SQQQ\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the covid prompt and target\n",
+    "print(train_df.loc['2020-01-23', 'prompt'])\n",
+    "print(f\"Target: {train_df.loc['2020-01-23', 'target']}\")\n"
    ]
   },
   {
