--- a/05-prompts.ipynb
+++ b/05-prompts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -50,41 +50,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>https://www.ft.com/content/e9bbd4fe-e6bf-4383-...</td>\n",
-       "      <td>Oxford/AstraZeneca jab fails to prevent mild a...</td>\n",
+       "      <th>2022-01-16</th>\n",
+       "      <td>https://www.ft.com/content/5d41778b-1ee5-43a7-...</td>\n",
+       "      <td>Novak Djokovic departs Australia after court u...</td>\n",
        "      <td>False</td>\n",
        "      <td>ft.com</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>https://www.ft.com/content/f2e8f0d6-db17-42af-...</td>\n",
-       "      <td>Antony Blinken blasts China in first phone call</td>\n",
+       "      <th>2022-01-16</th>\n",
+       "      <td>https://www.ft.com/content/47711349-d110-4d67-...</td>\n",
+       "      <td>Tory party chair signals Whitehall shake-up as...</td>\n",
        "      <td>False</td>\n",
        "      <td>ft.com</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>https://www.ft.com/content/6d86951c-a4af-4d0b-...</td>\n",
-       "      <td>The UK companies seeing the upside of Brexit</td>\n",
+       "      <th>2022-01-16</th>\n",
+       "      <td>https://www.ft.com/content/2fc48ac3-5328-4dc5-...</td>\n",
+       "      <td>China’s zero-Covid policy poses challenge for ...</td>\n",
        "      <td>False</td>\n",
        "      <td>ft.com</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>https://www.ft.com/content/97e43c01-2b5f-4907-...</td>\n",
-       "      <td>Government to take more control in overhaul of...</td>\n",
+       "      <th>2022-01-16</th>\n",
+       "      <td>https://www.ft.com/content/ccec6995-3029-4f47-...</td>\n",
+       "      <td>Sweden sends troops to Gotland as Russia ups a...</td>\n",
        "      <td>False</td>\n",
        "      <td>ft.com</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>https://www.ft.com/content/a0731e22-6407-4a52-...</td>\n",
-       "      <td>Remote workers tap scheme to see out pandemic ...</td>\n",
+       "      <th>2022-01-16</th>\n",
+       "      <td>https://www.ft.com/content/b0729d5a-7142-4568-...</td>\n",
+       "      <td>Expectations build for more than three US rate...</td>\n",
        "      <td>False</td>\n",
        "      <td>ft.com</td>\n",
        "      <td>5</td>\n",
@@ -96,30 +96,30 @@
       "text/plain": [
        "                                                          url  \\\n",
        "date                                                            \n",
-       "2021-02-07  https://www.ft.com/content/e9bbd4fe-e6bf-4383-...   \n",
-       "2021-02-07  https://www.ft.com/content/f2e8f0d6-db17-42af-...   \n",
-       "2021-02-07  https://www.ft.com/content/6d86951c-a4af-4d0b-...   \n",
-       "2021-02-07  https://www.ft.com/content/97e43c01-2b5f-4907-...   \n",
-       "2021-02-07  https://www.ft.com/content/a0731e22-6407-4a52-...   \n",
+       "2022-01-16  https://www.ft.com/content/5d41778b-1ee5-43a7-...   \n",
+       "2022-01-16  https://www.ft.com/content/47711349-d110-4d67-...   \n",
+       "2022-01-16  https://www.ft.com/content/2fc48ac3-5328-4dc5-...   \n",
+       "2022-01-16  https://www.ft.com/content/ccec6995-3029-4f47-...   \n",
+       "2022-01-16  https://www.ft.com/content/b0729d5a-7142-4568-...   \n",
        "\n",
        "                                                         text  isMorning  \\\n",
        "date                                                                       \n",
-       "2021-02-07  Oxford/AstraZeneca jab fails to prevent mild a...      False   \n",
-       "2021-02-07    Antony Blinken blasts China in first phone call      False   \n",
-       "2021-02-07       The UK companies seeing the upside of Brexit      False   \n",
-       "2021-02-07  Government to take more control in overhaul of...      False   \n",
-       "2021-02-07  Remote workers tap scheme to see out pandemic ...      False   \n",
+       "2022-01-16  Novak Djokovic departs Australia after court u...      False   \n",
+       "2022-01-16  Tory party chair signals Whitehall shake-up as...      False   \n",
+       "2022-01-16  China’s zero-Covid policy poses challenge for ...      False   \n",
+       "2022-01-16  Sweden sends troops to Gotland as Russia ups a...      False   \n",
+       "2022-01-16  Expectations build for more than three US rate...      False   \n",
        "\n",
        "            source  rank  \n",
        "date                      \n",
-       "2021-02-07  ft.com     1  \n",
-       "2021-02-07  ft.com     2  \n",
-       "2021-02-07  ft.com     3  \n",
-       "2021-02-07  ft.com     4  \n",
-       "2021-02-07  ft.com     5  "
+       "2022-01-16  ft.com     1  \n",
+       "2022-01-16  ft.com     2  \n",
+       "2022-01-16  ft.com     3  \n",
+       "2022-01-16  ft.com     4  \n",
+       "2022-01-16  ft.com     5  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,84 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date: 2020-01-23\n",
-      "Source: ft.com\n",
-      "- China extends travel restrictions in effort to contain coronavirus\n",
-      "- China quarantines city in effort to contain viral outbreak\n",
-      "- Trade tensions erupt between London and Washington\n",
-      "- How China’s slow response aided coronavirus outbreak\n",
-      "- Boris Johnson hails moment as EU withdrawal bill clears parliament\n",
-      "- Tesla hits $100bn stock market value for first time\n",
-      "- Iran: the unspoken battle to succeed Ayatollah Khamenei\n",
-      "- Trade tensions erupt between London and Washington\n",
-      "- US and France agree deal on digital tax\n",
-      "- US Treasury secretary Mnuchin launches attack on Greta Thunberg\n",
-      "- Tesla hits $100bn stock market value for first time\n",
-      "- ‘Mr Super Prime’ resigns after posting luxury home on Instagram\n",
-      "- Boeing chief on the Max: ‘I believe in this airplane’\n",
-      "- Comcast takes aim at CNN with NBC-Sky global news channel\n",
-      "- Amazon Music subscriber numbers close in on Apple\n",
-      "Source: drudgereport.com\n",
-      "- Dems face risks and limits in impeachment trial...\n",
-      "- Senators Play With Toys, Read Books...\n",
-      "- Suffer 'digital detox' as they hear case...\n",
-      "- Mulvaney becomes top target...\n",
-      "- POLL:  72% WANT WITNESSES...\n",
-      "- PEW:  DEEP PARTISAN SPLIT ON REMOVAL...\n",
-      "- Schiff, Nadler tension spills out...\n",
-      "- Giuliani claims he has goods on Biden, threatens to go public...\n",
-      "- SNAKES COULD BE SOURCE\n",
-      "- SUSPECTED CASE IN TEXAS\n",
-      "- Trump's reelection looks more like long shot than slam dunk?\n",
-      "- CNN cancels Dem presidential town halls because of impeachment trial...\n",
-      "- Over 40% of Americans don't have $1,000 for an emergency!\n",
-      "- MAG: Groupthink, Self-Censorship Making Journalism Lifeless...\n",
-      "- Weinstein trial turns to accusers...\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "def generate_daily_headlines_for_llm(day):\n",
-    "    # Filter the DataFrame for the given day\n",
-    "    day_headlines = cleaned_df.loc[day]\n",
-    "    \n",
-    "    # Create a string to hold the headlines and the date\n",
-    "    headlines_str = f\"Date: {day}\\n\"\n",
-    "    \n",
-    "    # Get unique sources\n",
-    "    unique_sources = day_headlines['source'].unique()\n",
-    "    \n",
-    "    # Iterate through the sources and add top 10 headlines from each source to the string\n",
-    "    for source in unique_sources:\n",
-    "        headlines_str += f\"Source: {source}\\n\"\n",
-    "        top_10_headlines = day_headlines[day_headlines['source'] == source].head(15)\n",
-    "        for index, row in top_10_headlines.iterrows():\n",
-    "            headlines_str += f\"- {row['text']}\\n\"\n",
-    "    \n",
-    "    return headlines_str\n",
-    "\n",
-    "example_day = '2020-01-23'\n",
-    "print(generate_daily_headlines_for_llm(example_day))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Cool, now let's pair it with the target and make a prompt!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,140 +151,117 @@
     "targets_df = load_targets_csv()\n",
     "targets_df.head()\n",
     "\n",
-    "def get_ticker_for_date(date):\n",
+    "def get_target_for_date(date):\n",
     "    try:\n",
     "        ticker = targets_df.loc[date, 'Ticker']\n",
     "    except KeyError:\n",
     "        ticker = None\n",
-    "    return ticker\n"
+    "    return ticker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows with target None: 203\n",
-      "Number of rows with prompt None: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def generate_source_daily_headlines_with_targets(cleaned_df):\n",
+    "    # Initialize an empty list to hold the prompt-target pairs\n",
+    "    prompt_target_pairs = []\n",
     "\n",
-    "# Generate a DataFrame with date as index, and columns for prompt and target\n",
+    "    # Get unique dates\n",
+    "    dates = cleaned_df.index.unique()\n",
+    "    print(f\"Found {len(dates)} unique dates.\")\n",
     "\n",
-    "# Create a list of dates for which we have data\n",
-    "dates = cleaned_df.index.unique()\n",
+    "    for date in dates:\n",
+    "        # Filter the DataFrame for the given day\n",
+    "        day_headlines = cleaned_df.loc[date]\n",
     "\n",
-    "# Initialize an empty list to hold the prompt-target pairs\n",
-    "prompt_target_pairs = []\n",
+    "        # Get unique sources for the day\n",
+    "        unique_sources = day_headlines['source'].unique()\n",
+    "        print(f\"\\nDate: {date} - Found {len(unique_sources)} unique sources.\")\n",
     "\n",
-    "# Loop through each date to generate prompts and targets\n",
-    "for date in dates:\n",
-    "    # Generate the daily headlines as the prompt\n",
-    "    prompt = generate_daily_headlines_for_llm(date)\n",
-    "    \n",
-    "    target = get_ticker_for_date(date)\n",
-    "    # Append the date, prompt, and target as a tuple to the list\n",
-    "    prompt_target_pairs.append((date, prompt, target))\n",
+    "        for source in unique_sources:\n",
+    "            # Filter headlines for the current source\n",
+    "            source_headlines = day_headlines[day_headlines['source'] == source]\n",
     "\n",
-    "# Convert the list of tuples into a DataFrame\n",
-    "prompt_target_df = pd.DataFrame(prompt_target_pairs, columns=['date', 'prompt', 'target'])\n",
+    "            # Fetch the target for the current date and source\n",
+    "            target = get_target_for_date(date)\n",
     "\n",
-    "# Set the date as the index\n",
-    "prompt_target_df.set_index('date', inplace=True)\n",
+    "            # Create a string to hold the headlines and the date\n",
+    "            headlines_str = f\"Date: {date}\\nSource: {source}\\n\"\n",
     "\n",
-    "prompt_target_df\n",
+    "            # Add top headlines from the source to the string\n",
+    "            for index, row in source_headlines.iterrows():\n",
+    "                headlines_str += f\"- {row['text']}\\n\"\n",
     "\n",
-    "# Count how many rows have target None\n",
-    "num_rows_with_target_none = prompt_target_df[prompt_target_df['target'].isnull()].shape[0]\n",
-    "print(f\"Number of rows with target None: {num_rows_with_target_none}\")\n",
+    "            # Append the date, source, headlines, and target as a tuple to the list\n",
+    "            prompt_target_pairs.append((date, source, headlines_str, target))\n",
     "\n",
-    "# Count how many rows have prompt None\n",
-    "num_rows_with_prompt_none = prompt_target_df[prompt_target_df['prompt'].isnull()].shape[0]\n",
-    "print(f\"Number of rows with prompt None: {num_rows_with_prompt_none}\")\n",
+    "            print(f\"Added prompt-target pair for {source} on {date} with {len(source_headlines)} headlines.\")\n",
     "\n",
-    "# drop rows with prompt or target None\n",
-    "prompt_target_df = prompt_target_df.dropna(subset=['prompt', 'target'])\n",
+    "    # Convert the list of tuples into a DataFrame\n",
+    "    prompt_target_df = pd.DataFrame(prompt_target_pairs, columns=['date', 'source', 'prompt', 'target'])\n",
     "\n",
-    "# Split the data into train and test\n",
-    "train_df = prompt_target_df[prompt_target_df.index < '2024-01-01']\n",
-    "test_df = prompt_target_df[prompt_target_df.index >= '2024-01-01']\n",
+    "    # Set the date and source as the multi-index\n",
+    "    prompt_target_df.set_index(['date', 'source'], inplace=True)\n",
     "\n",
-    "# save them as jsonl and csv\n",
-    "if not os.path.exists('05-prompts'):\n",
-    "    os.makedirs('05-prompts')\n",
-    "train_df.to_csv('05-prompts/train.csv')\n",
-    "test_df.to_csv('05-prompts/test.csv')\n",
-    "train_df.to_json('05-prompts/train.json', orient='records', lines=True)\n",
-    "test_df.to_json('05-prompts/test.json', orient='records', lines=True)\n",
-    "# rename to jsonl\n",
-    "os.rename('05-prompts/train.json', '05-prompts/train.jsonl')\n",
-    "os.rename('05-prompts/test.json', '05-prompts/test.jsonl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date: 2020-01-23 00:00:00\n",
-      "Source: ft.com\n",
-      "- China extends travel restrictions in effort to contain coronavirus\n",
-      "- China quarantines city in effort to contain viral outbreak\n",
-      "- Trade tensions erupt between London and Washington\n",
-      "- How China’s slow response aided coronavirus outbreak\n",
-      "- Boris Johnson hails moment as EU withdrawal bill clears parliament\n",
-      "- Tesla hits $100bn stock market value for first time\n",
-      "- Iran: the unspoken battle to succeed Ayatollah Khamenei\n",
-      "- Trade tensions erupt between London and Washington\n",
-      "- US and France agree deal on digital tax\n",
-      "- US Treasury secretary Mnuchin launches attack on Greta Thunberg\n",
-      "- Tesla hits $100bn stock market value for first time\n",
-      "- ‘Mr Super Prime’ resigns after posting luxury home on Instagram\n",
-      "- Boeing chief on the Max: ‘I believe in this airplane’\n",
-      "- Comcast takes aim at CNN with NBC-Sky global news channel\n",
-      "- Amazon Music subscriber numbers close in on Apple\n",
-      "Source: drudgereport.com\n",
-      "- Dems face risks and limits in impeachment trial...\n",
-      "- Senators Play With Toys, Read Books...\n",
-      "- Suffer 'digital detox' as they hear case...\n",
-      "- Mulvaney becomes top target...\n",
-      "- POLL:  72% WANT WITNESSES...\n",
-      "- PEW:  DEEP PARTISAN SPLIT ON REMOVAL...\n",
-      "- Schiff, Nadler tension spills out...\n",
-      "- Giuliani claims he has goods on Biden, threatens to go public...\n",
-      "- SNAKES COULD BE SOURCE\n",
-      "- SUSPECTED CASE IN TEXAS\n",
-      "- Trump's reelection looks more like long shot than slam dunk?\n",
-      "- CNN cancels Dem presidential town halls because of impeachment trial...\n",
-      "- Over 40% of Americans don't have $1,000 for an emergency!\n",
-      "- MAG: Groupthink, Self-Censorship Making Journalism Lifeless...\n",
-      "- Weinstein trial turns to accusers...\n",
-      "\n",
-      "SQQQ\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the covid prompt and target\n",
-    "print(train_df.loc['2020-01-23', 'prompt'])\n",
-    "print(f\"Target: {train_df.loc['2020-01-23', 'target']}\")\n"
+    "    # drop rows with target None\n",
+    "    prompt_target_df = prompt_target_df.dropna(subset=['target'])\n",
+    "\n",
+    "    print(\"\\nFinished generating prompt-target pairs. Sample pairs:\")\n",
+    "    print(prompt_target_df.head())\n",
+    "\n",
+    "    return prompt_target_df\n",
+    "\n",
+    "prompt_target_df = generate_source_daily_headlines_with_targets(cleaned_df)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Free. Gold."
+    "# Free. Gold.\n",
+    "\n",
+    "Tomorrow, we train."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save prompt_target_df as csv and jsonl in 05-prompts directory with only prompt and target\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Select only 'prompt' and 'target' columns\n",
+    "prompt_target_df = prompt_target_df[['prompt', 'target']]\n",
+    "\n",
+    "# Split the DataFrame into train and test sets\n",
+    "train_df, test_df = train_test_split(prompt_target_df, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Save the train DataFrame as a CSV file in 05-prompts directory\n",
+    "train_df.to_csv('05-prompts/train_prompt_target_pairs.csv', index=False)\n",
+    "\n",
+    "# Save the train DataFrame as a JSON Lines file (jsonl) in 05-prompts directory\n",
+    "train_df.to_json('05-prompts/train_prompt_target_pairs.jsonl', orient='records', lines=True)\n",
+    "\n",
+    "# Save the test DataFrame as a CSV file in 05-prompts directory\n",
+    "test_df.to_csv('05-prompts/test_prompt_target_pairs.csv', index=False)\n",
+    "\n",
+    "# Save the test DataFrame as a JSON Lines file (jsonl) in 05-prompts directory\n",
+    "test_df.to_json('05-prompts/test_prompt_target_pairs.jsonl', orient='records', lines=True)\n"
    ]
   }
  ],
